Setup `--enable-native-access=ALL-UNNAMED` flag