@@ -45,48 +45,43 @@ WARNING: sun.misc.Unsafe::staticFieldBase will be removed in a future release
 [INFO] Recompiling the module because of changed source code.
 [INFO] Compiling 2 source files with javac [debug release 24] to target\test-classes
 [INFO] 
-[INFO] --- surefire:3.2.5:test (default-test) @ clickhouse-mysql-interface-test ---
+[INFO] --- surefire:3.5.3:test (default-test) @ clickhouse-mysql-interface-test ---
 [INFO] Using auto detected provider org.apache.maven.surefire.junitplatform.JUnitPlatformProvider
 [INFO] 
 [INFO] -------------------------------------------------------
 [INFO]  T E S T S
 [INFO] -------------------------------------------------------
 [INFO] Running io.github.linghengqian.MySQLInterfaceTest
-12:29:46.065 [main] INFO  org.testcontainers.images.PullPolicy - Image pull policy will be performed by: DefaultPullPolicy()
-12:29:46.070 [main] INFO  org.testcontainers.utility.ImageNameSubstitutor - Image name substitution will be performed by: DefaultImageNameSubstitutor (composite of 'ConfigurationFileImageNameSubstitutor' and 'PrefixingImageNameSubstitutor')
-12:29:46.125 [main] INFO  org.testcontainers.DockerClientFactory - Testcontainers version: 1.21.3
-12:29:46.290 [main] INFO  org.testcontainers.dockerclient.DockerClientProviderStrategy - Loaded org.testcontainers.dockerclient.NpipeSocketClientProviderStrategy from ~/.testcontainers.properties, will try it first
-12:29:46.494 [main] INFO  org.testcontainers.dockerclient.DockerClientProviderStrategy - Found Docker environment with local Npipe socket (npipe:////./pipe/docker_engine)
-12:29:46.495 [main] INFO  org.testcontainers.DockerClientFactory - Docker host IP address is localhost
-12:29:46.515 [main] INFO  org.testcontainers.DockerClientFactory - Connected to docker:
+12:31:25.527 [main] INFO  org.testcontainers.images.PullPolicy - Image pull policy will be performed by: DefaultPullPolicy()
+12:31:25.531 [main] INFO  org.testcontainers.utility.ImageNameSubstitutor - Image name substitution will be performed by: DefaultImageNameSubstitutor (composite of 'ConfigurationFileImageNameSubstitutor' and 'PrefixingImageNameSubstitutor')
+12:31:25.582 [main] INFO  org.testcontainers.DockerClientFactory - Testcontainers version: 1.21.3
+12:31:25.733 [main] INFO  org.testcontainers.dockerclient.DockerClientProviderStrategy - Loaded org.testcontainers.dockerclient.NpipeSocketClientProviderStrategy from ~/.testcontainers.properties, will try it first
+12:31:25.925 [main] INFO  org.testcontainers.dockerclient.DockerClientProviderStrategy - Found Docker environment with local Npipe socket (npipe:////./pipe/docker_engine)
+12:31:25.926 [main] INFO  org.testcontainers.DockerClientFactory - Docker host IP address is localhost
+12:31:25.942 [main] INFO  org.testcontainers.DockerClientFactory - Connected to docker:
   Server Version: 27.3.1
   API Version: 1.47
   Operating System: Rancher Desktop WSL Distribution
   Total Memory: 15588 MB
-12:29:46.551 [main] INFO  tc.testcontainers/ryuk:0.12.0 - Creating container for image: testcontainers/ryuk:0.12.0
-12:29:46.600 [main] INFO  org.testcontainers.utility.RegistryAuthLocator - Credential helper/store (docker-credential-wincred) does not have credentials for https://index.docker.io/v1/
-12:29:46.699 [main] INFO  tc.testcontainers/ryuk:0.12.0 - Container testcontainers/ryuk:0.12.0 is starting: c2bedec33b9ac449fed6ef7191e86f61f66ccf46da60fe433263776fdc7bb848
-12:29:47.199 [main] INFO  tc.testcontainers/ryuk:0.12.0 - Container testcontainers/ryuk:0.12.0 started in PT0.6484264S
-12:29:47.206 [main] INFO  org.testcontainers.utility.RyukResourceReaper - Ryuk started - will monitor and terminate Testcontainers containers on JVM exit
-12:29:47.206 [main] INFO  org.testcontainers.DockerClientFactory - Checking the system...
-12:29:47.206 [main] INFO  org.testcontainers.DockerClientFactory - ?? Docker server version should be at least 1.6.0
-12:29:47.207 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Creating container for image: clickhouse/clickhouse-server:25.6.5.41
-12:29:47.275 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Container clickhouse/clickhouse-server:25.6.5.41 is starting: 8936359a0d702759f1a97f73a237faa70fafd73438898109d5d35a24d0f75d18
-12:29:48.316 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Container clickhouse/clickhouse-server:25.6.5.41 started in PT1.1092841S
-12:29:48.432 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - ClickHouse JDBC driver version: clickhouse-jdbc 0.9.0 (revision: 27ccb8e)
-12:29:48.432 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
-12:29:48.443 [awaitility-thread] INFO  com.clickhouse.jdbc.Driver - ClickHouse JDBC driver version: 0.9.0
-12:29:48.443 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - ClickHouse JDBC driver version: clickhouse-jdbc 0.9.0 (revision: 27ccb8e)
-12:29:48.443 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
-12:29:48.451 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
-WARNING: A restricted method in java.lang.System has been called
-WARNING: java.lang.System::loadLibrary has been called by net.jpountz.util.Native in an unnamed module (file:/C:/Users/lingh/.m2/repository/org/lz4/lz4-java/1.8.0/lz4-java-1.8.0.jar)
-WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
-WARNING: Restricted methods will be blocked in a future release unless native access is enabled
-
-12:29:48.718 [main] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
-[ERROR] Tests run: 1, Failures: 1, Errors: 0, Skipped: 0, Time elapsed: 3.566 s <<< FAILURE! -- in io.github.linghengqian.MySQLInterfaceTest
-[ERROR] io.github.linghengqian.MySQLInterfaceTest.test -- Time elapsed: 3.542 s <<< FAILURE!
+12:31:25.975 [main] INFO  tc.testcontainers/ryuk:0.12.0 - Creating container for image: testcontainers/ryuk:0.12.0
+12:31:26.021 [main] INFO  org.testcontainers.utility.RegistryAuthLocator - Credential helper/store (docker-credential-wincred) does not have credentials for https://index.docker.io/v1/
+12:31:26.113 [main] INFO  tc.testcontainers/ryuk:0.12.0 - Container testcontainers/ryuk:0.12.0 is starting: 0b63f3c8e64218226bebf284ef3d240563cdbd68698c8135aef37213092e0f42
+12:31:26.583 [main] INFO  tc.testcontainers/ryuk:0.12.0 - Container testcontainers/ryuk:0.12.0 started in PT0.6077628S
+12:31:26.589 [main] INFO  org.testcontainers.utility.RyukResourceReaper - Ryuk started - will monitor and terminate Testcontainers containers on JVM exit
+12:31:26.590 [main] INFO  org.testcontainers.DockerClientFactory - Checking the system...
+12:31:26.590 [main] INFO  org.testcontainers.DockerClientFactory - ?? Docker server version should be at least 1.6.0
+12:31:26.590 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Creating container for image: clickhouse/clickhouse-server:25.6.5.41
+12:31:26.654 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Container clickhouse/clickhouse-server:25.6.5.41 is starting: d3862da6010b6c014b2f2b49f3ad6bb0ca84ee43235e189d4b442cee4972577c
+12:31:27.526 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Container clickhouse/clickhouse-server:25.6.5.41 started in PT0.9358173S
+12:31:27.641 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - ClickHouse JDBC driver version: clickhouse-jdbc 0.9.0 (revision: 27ccb8e)
+12:31:27.641 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
+12:31:27.652 [awaitility-thread] INFO  com.clickhouse.jdbc.Driver - ClickHouse JDBC driver version: 0.9.0
+12:31:27.652 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - ClickHouse JDBC driver version: clickhouse-jdbc 0.9.0 (revision: 27ccb8e)
+12:31:27.652 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
+12:31:27.660 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
+12:31:27.903 [main] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
+[ERROR] Tests run: 1, Failures: 1, Errors: 0, Skipped: 0, Time elapsed: 3.247 s <<< FAILURE! -- in io.github.linghengqian.MySQLInterfaceTest
+[ERROR] io.github.linghengqian.MySQLInterfaceTest.test -- Time elapsed: 3.224 s <<< FAILURE!
 org.opentest4j.AssertionFailedError:
 Unexpected exception thrown: com.mysql.cj.jdbc.exceptions.CommunicationsException: Communications link failure
 
@@ -141,13 +136,13 @@ Caused by: java.io.EOFException: Can not read response from server. Expected to 
         ... 19 more
 
 [INFO] Running io.github.linghengqian.PostgresInterfaceTest
-12:29:49.429 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Creating container for image: clickhouse/clickhouse-server:25.6.5.41
-12:29:49.483 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Container clickhouse/clickhouse-server:25.6.5.41 is starting: 4a55e0041fc3ee1b30bdf6781d8e09238aa448d5c4e7803d08df6b4b50378313
-12:29:50.336 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Container clickhouse/clickhouse-server:25.6.5.41 started in PT0.9074147S
-12:29:50.439 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
-12:29:50.463 [main] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
-[ERROR] Tests run: 1, Failures: 1, Errors: 0, Skipped: 0, Time elapsed: 1.724 s <<< FAILURE! -- in io.github.linghengqian.PostgresInterfaceTest
-[ERROR] io.github.linghengqian.PostgresInterfaceTest.test -- Time elapsed: 1.723 s <<< FAILURE!
+12:31:28.597 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Creating container for image: clickhouse/clickhouse-server:25.6.5.41
+12:31:28.648 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Container clickhouse/clickhouse-server:25.6.5.41 is starting: 966c7c0f118d1be5ceb2a0609fe47f466fffe1536124166fb370d5fdedff84e5
+12:31:29.530 [main] INFO  tc.clickhouse/clickhouse-server:25.6.5.41 - Container clickhouse/clickhouse-server:25.6.5.41 started in PT0.9330545S
+12:31:29.632 [awaitility-thread] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
+12:31:29.654 [main] INFO  com.clickhouse.jdbc.ClickHouseDriver - v2 driver
+[ERROR] Tests run: 1, Failures: 1, Errors: 0, Skipped: 0, Time elapsed: 1.758 s <<< FAILURE! -- in io.github.linghengqian.PostgresInterfaceTest
+[ERROR] io.github.linghengqian.PostgresInterfaceTest.test -- Time elapsed: 1.756 s <<< FAILURE!
 org.opentest4j.AssertionFailedError: Unexpected exception thrown: org.postgresql.util.PSQLException: 尝试连线已失败。
         at org.junit.jupiter.api.AssertionFailureBuilder.build(AssertionFailureBuilder.java:152)
         at org.junit.jupiter.api.AssertDoesNotThrow.createAssertionFailedError(AssertDoesNotThrow.java:84)
@@ -203,13 +198,13 @@ The last packet sent successfully to the server was 0 milliseconds ago. The driv
 [INFO] ------------------------------------------------------------------------
 [INFO] BUILD FAILURE
 [INFO] ------------------------------------------------------------------------
-[INFO] Total time:  8.260 s
-[INFO] Finished at: 2025-07-28T12:29:51+08:00
+[INFO] Total time:  8.541 s
+[INFO] Finished at: 2025-07-28T12:31:30+08:00
 [INFO] ------------------------------------------------------------------------
-[ERROR] Failed to execute goal org.apache.maven.plugins:maven-surefire-plugin:3.2.5:test (default-test) on project clickhouse-mysql-interface-test: There are test failures.
+[ERROR] Failed to execute goal org.apache.maven.plugins:maven-surefire-plugin:3.5.3:test (default-test) on project clickhouse-mysql-interface-test: There are test failures.
 [ERROR]
-[ERROR] Please refer to D:\TwinklingLiftWorks\git\public\clickhouse-mysql-interface-test\target\surefire-reports for the individual test results.
-[ERROR] Please refer to dump files (if any exist) [date].dump, [date]-jvmRun[N].dump and [date].dumpstream.
+[ERROR] See D:\TwinklingLiftWorks\git\public\clickhouse-mysql-interface-test\target\surefire-reports for the individual test results.
+[ERROR] See dump files (if any exist) [date].dump, [date]-jvmRun[N].dump and [date].dumpstream.
 [ERROR] -> [Help 1]
 [ERROR]
 [ERROR] To see the full stack trace of the errors, re-run Maven with the -e switch.
